# ItemEditor

./: .agent.md  .gitignore  .mcp.json  AGENTS.md  README.md  execute_task.md  forge.yaml  instructions.md  prompt.md  workflow.md
ItemEditor.Qt6/: CMakeLists.txt  README.md  build.bat  build.sh
ItemEditor.Qt6/plugins/: CMakeLists.txt
ItemEditor.Qt6/plugins/PluginOne/: CMakeLists.txt  DatParserV8.cpp  DatParserV8.h  PluginOne.cpp  PluginOne.h  SprParserV8.cpp  SprParserV8.h  pluginone.json
ItemEditor.Qt6/plugins/PluginThree/: CMakeLists.txt  DatParserV10.cpp  DatParserV10.h  PluginThree.cpp  PluginThree.h  SprParserV10.cpp  SprParserV10.h  pluginthree.json
ItemEditor.Qt6/plugins/PluginTwo/: CMakeLists.txt  DatParserV9.cpp  DatParserV9.h  PluginTwo.cpp  PluginTwo.h  SprParserV9.cpp  SprParserV9.h  plugintwo.json
ItemEditor.Qt6/src/ItemEditor.Core/: BackupManager.cpp  BackupManager.h  CMakeLists.txt  ClientItem.cpp  ClientItem.h  ErrorHandler.cpp  ErrorHandler.h  ItemComparator.cpp  ItemComparator.h  ItemEditingManager.cpp  ItemEditingManager.h  ItemEnums.h  ItemTypes.h  ItemValidator.cpp  ItemValidator.h  OtbFileManager.cpp  OtbFileManager.h  OtbFileValidator.cpp  OtbFileValidator.h  OtbReader.cpp  OtbReader.h  OtbWriter.cpp  OtbWriter.h  ServerItem.cpp  ServerItem.h  ServerItemList.cpp  ServerItemList.h  UndoCommands.cpp  UndoCommands.h
ItemEditor.Qt6/src/ItemEditor.Plugins/: BasePlugin.cpp  BasePlugin.h  CMakeLists.txt  ClientDataTypes.cpp  ClientDataTypes.h  DatParser.h  IPlugin.h  PluginManager.cpp  PluginManager.h  SprParser.h  SpriteData.cpp  SpriteData.h
ItemEditor.Qt6/src/ItemEditor.Tests/: CMakeLists.txt  CoreTests.cpp  MainWindowTests.cpp  OtbReaderTests.cpp  OtbWriterTests.cpp  PluginManagerTests.cpp  PluginTests.cpp  ServerItemListTests.cpp  ServerItemListWidgetTests.cpp  ServerItemTests.cpp  UITests.cpp
ItemEditor.Qt6/src/ItemEditor.UI/: CMakeLists.txt  ClientItemWidget.cpp  ClientItemWidget.h  FindItemDialog.cpp  FindItemDialog.h  FindItemDialog.ui  ItemEditor.rc  MainWindow.cpp  MainWindow.h  MainWindow.ui  PluginConfigDialog.cpp  PluginConfigDialog.h  ProgressDialog.cpp  ProgressDialog.h  ProgressDialogFactory.cpp  ProgressDialogFactory.h  PropertyEditorWidget.cpp  PropertyEditorWidget.h  ServerItemListWidget.cpp  ServerItemListWidget.h  SettingsDialog.cpp  SettingsDialog.h  itemeditor.desktop.in  main.cpp  resources.qrc
project_qt6/: .agent.md  CMakeLists.txt  FINAL_BUILD_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Plugin_Removal_Documentation.md  README.md  agents.md  build_final.bat  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
project_qt6/build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ItemEditorQt.sln  ItemEditorQt.vcxproj  ItemEditorQt.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
project_qt6/build-release/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
project_qt6/build-release/ItemEditorQt_autogen/: mocs_compilation_Release.cpp
project_qt6/dialogs/: aboutdialog.cpp  compareotbdialog.cpp  compareotbdialog.h  finditemdialog.cpp  finditemdialog.h  preferencesdialog.cpp  preferencesdialog.h  spritecandidatesdialog.cpp  updateotbdialog.cpp  updateotbdialog.h
project_qt6/docs/: OTB_Error_Handling_System.md  PROJECT_STRUCTURE.md
project_qt6/include/core/: application.h  applicationbase.h  appsettings.h  commandmanager.h  eventmanager.h  interfaces.h  resourcemanager.h  resources.h  settingsmanager.h  stylesheetmanager.h  utils.h  windowbase.h
project_qt6/include/otb/: binarytree.h  item.h  otbbackup.h  otbbackup_standalone.h  otbcache.h  otberrors.h  otbheader.h  otbperformance.h  otbreader.h  otbtypes.h  otbvalidator.h  otbwriter.h
project_qt6/include/plugins/: baseplugin.h  exampleplugin.h  iplugin.h  plugindiscovery.h  pluginfactory.h  pluginloader.h  plugins.h  pluginsecurity.h  pluginservices.h  versionmanager.h
project_qt6/include/tibiadata/: datparser.h  sprparser.h
project_qt6/include/ui/: aboutdialog.h  clientitemview.h  finditemdialog.h  mainwindow.h  preferencesdialog.h  spritecandidatesdialog.h  updateotbdialog.h
project_qt6/otb/: binarytree.cpp  binarytree.h  item.cpp  item.h  otbreader.cpp  otbreader.h  otbtypes.cpp  otbtypes.h  otbwriter.cpp  otbwriter.h
project_qt6/plugins/: dummyplugin.cpp  dummyplugin.h  iplugin.cpp  iplugin.h  realplugin770.cpp  realplugin770.h  realplugin860.cpp  realplugin860.h
project_qt6/plugins_backup/: dummyplugin.cpp  dummyplugin.h  dummyplugin.json  iplugin.cpp  iplugin.h  realplugin770.cpp  realplugin770.h  realplugin770.json  realplugin860.cpp  realplugin860.h  realplugin860.json
project_qt6/resources/: dark.qss  resources.qrc
project_qt6/src/: main.cpp  simple_gui_test.cpp
project_qt6/tests/: CMakeLists.txt  build_test.cpp  demo_backup.cpp  test_binarytree.cpp  test_binarytree.h  test_otb_comprehensive.cpp  test_otbbackup.cpp  test_otbbackup_simple.cpp  test_otberrors.cpp  test_otberrors_integration.cpp  test_otbheader.cpp  test_otbheader_integration.cpp  test_otbperformance.cpp  test_otbperformance_simple.cpp  test_otbreader_enhanced.cpp  test_otbvalidator.cpp  test_otbwriter.cpp  test_performance_basic.cpp  test_performance_minimal.cpp
project_qt6/tibiadata/: datparser.cpp  datparser.h  imagesimilarity.cpp  imagesimilarity.h  sprparser.cpp  sprparser.h
project_qt6/widgets/: clientitemview.cpp  clientitemview.h
qt6_project/: .agent.md  CMakeLists.txt  README.md  build_linux.py  build_linux_all_in_one.py  build_qt6_project.py  cmake_error_logger.py  qt6_project.pro  setup_environment.py
qt6_project/docs/: CLAUDE_MIGRATION_INSTRUCTIONS.md  MIGRATION_GUIDE.md  PLUGIN_SYSTEM.md  UI_Documentation_Complete.md
qt6_project/plugins/: CMakeLists.txt
qt6_project/src/: CMakeLists.txt  MainForm.cpp  MainForm.h  MainForm.ui  main.cpp
(+412 files in other folders)
